Add modal, buttons
Added ability to add equipments

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+a {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+p {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
 .page{
     display: flex;
     justify-content: space-around;
@@ -7,4 +14,41 @@
     width: 200px;
     height: 100px;
     
+}
+
+.hidden{
+    display: none;
+}
+
+/* Modal window */
+.addEquipment-modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1050;
+    opacity: 0; /* по умолчанию модальное окно прозрачно */
+    pointer-events: none; /* элемент невидим для событий мыши */
+}
+
+.addEquipment-modal-active{
+    opacity: 1;
+    pointer-events: auto;
+    overflow-y: auto;
+}
+
+.editEquipment{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 200px;
+    height: 400px;
+    background-color: aliceblue;
+}
+
+.equipment{
+    display: flex;
+    align-items: center;
 }
