--- a/public/style.css
+++ b/public/style.css
@@ -1,24 +1,81 @@
-a {
-    font-family: 'Source Sans Pro', sans-serif;
-}
-p {
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-.page{
-    display: flex;
-    justify-content: space-around;
-}
-
-.right-sidebar{
-    width: 200px;
-    height: 100px;
-    
+*{
+  margin: 0;
+  padding: 0;
 }
 
 .hidden{
-    display: none;
+  display: none;
 }
+
+/* button*/
+button{
+  background-color: #72c6eb; 
+  border: none;
+  border-radius: 2px;
+  color: white;
+  padding: 8px 18px;
+  margin: 2px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+} 
+button:hover {
+  background-color: #90d3f0; 
+  } /* при наведении курсора мышки */
+button:active { 
+  background-color:#329dca;
+ } /* при нажатии */
+
+
+
+/* input */
+input{
+  border: 1px solid #ccc;
+  border-radius: 1px;
+  padding: 10px;
+  margin: 0.5vh;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+input[type='number'] {
+    -moz-appearance: textfield;
+}
+
+
+
+
+/* Page style */
+#root{
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.page{
+    font-family: 'Source Sans Pro', sans-serif;
+    height: 100%;
+    display: flex;
+    background-color: #f1f8f9;
+}
+
+.left-sidebar{
+  background: #2e3335;
+  width: 30%;
+  padding-top: 5vh;
+ 
+}
+
+.right-sidebar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    overflow-y: auto;
+}
+
 
 /* Modal window */
 .addEquipment-modal{
@@ -34,57 +91,102 @@ p {
 }
 
 .addEquipment-modal-active{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1050;
+
     opacity: 1;
     pointer-events: auto;
     overflow-y: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .editEquipment{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 200px;
-    height: 400px;
-    background-color: aliceblue;
-}
-
-.equipment{
-    display: flex;
     align-items: center;
+    width: 20%;
+    height: 20vh;
+    background-color: white;
+    border-radius: 5px;
 }
 
+.modalButton{
+  margin-top: 1vh;
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+ }
 
-/* Class of list */
 
 
 
-/* .category-list * {transition: .4s linear;}
+/* list style */
+
 .category-list {
-  background: white;
-  list-style-type: circle;
+  list-style-type: none;
   list-style-position: inside;
-  padding: 0 10px;
-  margin: 0;
+  padding: 0 25px;
+}
+.category-list li::before {
+  content: "\2022";  
+  color: white; 
+  display: inline-block; 
+  width: 1em; 
+  margin-left: -1em; 
 }
 .category-list li {
-  font-family: "Trebuchet MS", "Lucida Sans";
-  border-bottom: 1px solid #efefef;
-  padding: 10px 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  padding: 8px 0;
+  text-decoration: none;
+  color: white;
 }
 .category-list a {
-  text-decoration: none;
-  color: #555;
+  cursor: pointer;
 }
-.category-list li span {
-  float: right;
-  display: inline-block;
-  border: 1px solid #efefef;
-  padding: 0 5px;
-  font-size: 13px;
-  color: #999;
+
+
+/* table style */
+table:empty{
+  display: none;
 }
-.category-list li:hover a {color: #c93961;}
-.category-list li:hover span {
-  color: #c93961;
-  border: 1px solid #c93961;
-} */
+
+.equipment-table{
+  width: 40%;
+}
+
+table {
+  font-family: 'Source Sans Pro', sans-serif;
+  border:1px solid #d3d3d3;
+  background:#fefefe;
+  width:100%;
+  margin:5% auto 1vh;
+  border-radius:5px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  border-collapse: collapse;
+}
+
+tr {
+  padding:5px 10px 5px; 
+  text-align:center; 
+  border-bottom:1px solid #e0e0e0;
+}
+
+table:last-child {
+  border-bottom: none;
+}
+
+td:last-child{
+  display: flex;
+  justify-content: space-around;
+}
+
+
