--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    overflow: auto;
+    overflow: none;
     font-family: 'Source Sans Pro', sans-serif;
     background-color: #f1f8f9;
 }
