--- a/src/containers/EquipmentsArticle/EquipmentsArticle.module.css
+++ b/src/containers/EquipmentsArticle/EquipmentsArticle.module.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
     font-size: 20px;
+    margin-top: 1vh;
+    overflow-y: auto;
 }
 
 .equipmentsTable {
@@ -36,4 +38,8 @@ tr:last-child td {
 
 .equipmentsButton{
     width:5%;
+}
+
+.nameWrap{
+    word-break: break-word
 }
