--- a/src/components/AddEquipmentModal/AddEquipmentModal.module.css
+++ b/src/components/AddEquipmentModal/AddEquipmentModal.module.css
@@ -1,4 +1,3 @@
-
 .AddEquipmentModal{
     position: fixed;
     top: 0;
@@ -16,8 +15,8 @@
 }
 
 .modalWindow{
-    width: 25%;
-    height: 25%;
+    min-width: 30%;
+    min-height: 35%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,14 +24,70 @@
     border-radius: 5px;
     background-color: white;
 }
+.modalWindow h1{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 25px;
+    margin: 2vh;
+}
+.modalWindow .inputCount, .modalWindow .inputName{
+    height: 3vh;
+    width: 80%;
+    margin-top: 3vh;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid rgb(185, 185, 185);
+}
+
+.modalWindow input:focus{
+    outline: none;
+}
+
+.modalWindow input::-webkit-outer-spin-button,
+.modalWindow input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; 
+}
+
+.wrongName { 
+    height: 3vh;
+    width: 80%;
+    margin-top: 3vh;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
+    border: none;
+    border-bottom: 1px solid red;
+}
 
 .modalButton{
-  margin-top: 1vh;
-  width: 70%;
-  display: flex;
-  justify-content: space-around;
- }
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+}
 
- input{
-     width:80%
- }
+.button{
+    width: 30%;
+    display: inline-block;
+    margin: 4vh 1vh 1vh 1vh;
+    padding: 10px 10px;
+    border: none;
+    background-color: #72c6eb; 
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
+  } 
+.button:hover {
+    background-color: #90d3f0; 
+    } 
+.button:active { 
+    background-color:#329dca;
+   }
+.button:focus {
+    outline: none;
+}
+.button p{
+  font-family: 'Source Sans Pro', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+}
