--- a/src/containers/EquipmentsArticle/EquipmentsArticle.module.css
+++ b/src/containers/EquipmentsArticle/EquipmentsArticle.module.css
@@ -19,6 +19,11 @@ tr:hover {
     background-color: #90d3f0; 
 }
 
+th{
+    padding: 8px;
+    border-bottom: 1px solid rgb(224, 224, 224);
+}
+
 td {
     padding: 8px;
     border-bottom: 1px solid rgb(224, 224, 224);
